--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -53,6 +53,7 @@
                         </div>
                     </div>
                 </li>
+
                 <!-- --------------------------------------------------------------------------------------- -->
                 <!-- -------------------------------- Dependencies ----------------------------------------- -->
                 <!-- --------------------------------------------------------------------------------------- -->
@@ -82,11 +83,14 @@
                         <div class="row">
                             <p>Hide variables from depended tools (Dropdown???)</p>
                             <p>installation commands</p>
+                            <div id="tool_installation_editor"></div> 
                             <p>validation commands</p>
+                            <div id="tool_validation_editor"></div> 
                         </div>
                     </div>
                 </li>
             </ul>
+
         </div>
         <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
         <!-- --------------------------------------------------- Edit Workflow Right Panel ------------------------------------------------------------------- -->
