Singup error message AND Toast UPDATED

--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -101,6 +101,10 @@ nav {
     color: #f44336;
 }
 
+.material-icons {
+    vertical-align: middle;
+}
+
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------------- D3 example ----------------------------------------------------------------------------------- */
