--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -9,10 +9,17 @@
         <div class="faster" id="createToolDataDiv" style="display: none;">
             <div class="left-align" style="margin-left: 10px; margin-right: 15px;">
                 <p>
-                    <h5>Create Tool/Data</h5>
+                    <h5>
+                        <span ng-bind="tools_info_name"></span>/<span ng-bind="tools_info_version"></span><span ng-show="!tools_info_editable">/<span ng-bind="tools_info_edit"></span></span>
+                    </h5>
                     <small class="form-text text-muted">
-                        kantale, created at Thu 20 Sep 2018 15:25:24, forked from <a href="#">plink/1.9/1</a>
+                        <span ng-bind="tool_info_username"></span>
+                        <span ng-show="!tools_info_editable">, created at <span ng-bind="tool_info_created_at"></span></span>
+                        <span ng-show="tools_info_forked_from">, forked from <a href ng-click="tools_search_show_item(tools_info_forked_from)"><span ng-bind="tools_info_forked_from | tool_label"></span></a></span>
                     </small>
+                </p>
+                <p>
+                    TOAST!: <span ng-bind="tools_info_success_message"></span>
                 </p>
                 <!-- Buttons -->
                 <div class="row right-align">
@@ -21,9 +28,9 @@
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Collapse All"><i class="material-icons">expand_less</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Save"><i class="material-icons">save</i></a>
+                        data-tooltip="Save" ng-click="tool_create_save_pressed()" ng-show="tools_info_editable"><i class="material-icons">save</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Fork"><i class="material-icons">device_hub</i></a>
+                        data-tooltip="Fork" ng-click="tool_info_fork_pressed()" ng-show="!tools_info_editable" ng-class="{'disabled': !username}"><i class="material-icons">device_hub</i></a>
                 </div>
             </div>
 
@@ -41,11 +48,11 @@
                         <div class="row">
                             <form class="col s12">
                                 <div class="input-field">
-                                    <input id="generalWebsite" type="text" class="validate">
+                                    <input id="generalWebsite" type="text" class="validate" ng-model="tool_website" ng-disabled="!tools_info_editable">
                                     <label for="generalWebsite">Website</label>
                                 </div>
                                 <div class="input-field">
-                                    <textarea id="generalDescription" class="validate materialize-textarea"></textarea>
+                                    <textarea id="generalDescription" class="validate materialize-textarea" ng-model="tool_description" ng-disabled="!tools_info_editable"></textarea>
                                     <label for="generalDescription">Description</label>
                                 </div>
                                 <div class="input-field chips left-align"></div>
