--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -1,7 +1,22 @@
+<!-- Modal Structure -->
+<div id="warningModal" class="modal">
+    <div class="modal-content">
+        <h4>Warning</h4>
+        <p>All changes will be lost. Are you sure you want to continue?</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-red btn-flat">No</a>
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Yes</a>
+    </div>
+</div>
+
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
 <!-- --------------------------------------------------------- Left Panel ---------------------------------------------------------------------------- -->
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
 <div class="leftPanel">
+
+    <!-- Modal Trigger -->
+    <a class="waves-effect waves-light btn modal-trigger" href="#warningModal">Modal</a>
 
     <div style="margin: 20px;">
         <!-- --------------------------------------------------------------------------------------- -->
@@ -24,7 +39,8 @@
                 <div class="collapsible-header">
                     <i class="material-icons arrow">keyboard_arrow_right</i>
                     <i class="material-icons">filter_drama</i>
-                    Tools/Data<span class="new badge" data-badge-caption="found" ng-bind="tools_search_tools_number"></span>
+                    Tools/Data<span class="new badge" data-badge-caption="found"
+                        ng-bind="tools_search_tools_number"></span>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
@@ -32,25 +48,29 @@
                         <form class="col s12">
                             <div class="row">
                                 <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                    <input id="toolsDataName" type="text" class="validate" ng-model="tools_search_name" ng-change="tools_search_input_changed()">
+                                    <input id="toolsDataName" type="text" class="validate" ng-model="tools_search_name"
+                                        ng-change="tools_search_input_changed()">
                                     <label for="toolsDataName">Name</label>
                                 </div>
                                 <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                    <input id="toolsDataVersion" type="text" class="validate" ng-model="tools_search_version" ng-change="tools_search_input_changed()">
+                                    <input id="toolsDataVersion" type="text" class="validate"
+                                        ng-model="tools_search_version" ng-change="tools_search_input_changed()">
                                     <label for="toolsDataVersion">Version</label>
                                 </div>
                                 <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                    <input id="toolsDataEdit" type="text" class="validate" ng-model="tools_search_edit" ng-change="tools_search_input_changed()">
+                                    <input id="toolsDataEdit" type="text" class="validate" ng-model="tools_search_edit"
+                                        ng-change="tools_search_input_changed()">
                                     <label for="toolsDataEdit">Edit</label>
                                 </div>
                             </div>
                         </form>
-                        <!-- Test buttons --> 
+                        <!-- Test buttons -->
                         <!-- 
                             ng-class="{'disabled': !username}" 
                             ng-show="(!tools_search_warning) && tools_search_name && tools_search_version"
-                        --> 
-                        <a id="createToolDataBtn" class="waves-effect waves-light btn" ng-click="tools_search_create_new_pressed()">create tool/data</a>
+                        -->
+                        <a id="createToolDataBtn" class="waves-effect waves-light btn"
+                            ng-click="tools_search_create_new_pressed()">create tool/data</a>
                         <a id="cancelToolDataBtn" class="waves-effect waves-light btn">cancel tool/data</a>
                     </div>
                     <div class="row col s12" ng-show="tools_search_warning">
@@ -70,7 +90,9 @@
 
                     <div class="row left-align">
                         <div class="col">
-                            <div js-tree="tools_search_jstree_config" should-apply="tools_search_jstree_config_apply()" ng-model="tools_search_jstree_model" tree="tools_search_jstree" tree-events="select_node:tools_search_jstree_select_node"></div>
+                            <div js-tree="tools_search_jstree_config" should-apply="tools_search_jstree_config_apply()"
+                                ng-model="tools_search_jstree_model" tree="tools_search_jstree"
+                                tree-events="select_node:tools_search_jstree_select_node"></div>
                         </div>
                     </div>
 
