raise and close modal from angular

--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -5,8 +5,8 @@
         <p>All changes will be lost. Are you sure you want to continue?</p>
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-red btn-flat">No</a>
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Yes</a>
+        <a href class="waves-effect waves-red btn-flat" ng-click="tools_search_jstree_modal_editable(false)">No</a> <!-- modal-close -->
+        <a href class="waves-effect waves-green btn-flat" ng-click="tools_search_jstree_modal_editable(true)">Yes</a>
     </div>
 </div>
 
@@ -16,7 +16,7 @@
 <div class="leftPanel">
 
     <!-- Modal Trigger -->
-    <a class="waves-effect waves-light btn modal-trigger" href="#warningModal">Modal</a>
+    <!-- <a class="waves-effect waves-light btn modal-trigger" href="#warningModal">Modal</a> -->
 
     <div style="margin: 20px;">
         <!-- --------------------------------------------------------------------------------------- -->
