open modal materialize bug FIXED

--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -9,7 +9,7 @@
             <!-- Navbar Content -->
             <ul id="main-nav" class="right hide-on-med-and-down">
                 <li><a class="black-text" href="#">Home</a></li>
-                <li ng-show="!username"><a href id="signInBtn" class="modal-trigger black-text" ng-click="navbar_signup_pressed()">Sign in</a></li> <!-- href="#signModal" -->
+                <li ng-show="!username"><a href="#signModal" id="signInBtn" class="modal-trigger black-text" ng-click="navbar_signup_pressed()">Sign in</a></li> <!-- href="#signModal" -->
                 <li ng-show="username">
                     <a class="dropdown-trigger valign-wrapper black-text" href="#" data-target="profile">
                         <img class="circle responsive-img imgAvatar" alt="Avatar">
