--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -153,6 +153,9 @@
                                 </table>
                             </div>
                         </div>
+                        <div class="row col s12">
+                            <button class="btn waves-effect waves-light">Validate</button>
+                        </div>
                     </div>
                 </li>
             </ul>
