--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -154,7 +154,12 @@
                             </div>
                         </div>
                         <div class="row col s12">
-                            <button class="btn waves-effect waves-light">Validate</button>
+                            <button class="btn waves-effect waves-light" ng-click="tool_info_validate_pressed()">Validate</button>
+                        </div>
+                        <div class="row col s12 left-align">
+                            <code>
+                                <pre ng-bind="tool_info_validation_message"></pre>
+                            </code>
                         </div>
                     </div>
                 </li>
